kubernetes/apps/security/authentik/app/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
spec:
  hostnames: ["${GATUS_SUBDOMAIN:=${APP}}.monosense.dev"]
  parentRefs:
    - name: cilium-external
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: authentik-server
          namespace: security
          port: 80
